# kipimo

./: README.md  pyproject.toml
docs/: SCORECARD.md
examples/: generate_predictions.py
src/kipimo/: __init__.py  cli.py  targets.py
src/kipimo/data/: LICENSE-DATA  kipimo_v0.1.jsonl
tests/: test_kipimo.py  test_smoke.py  test_targets.py
